Add rules to Github css so normal text size is more consistent with headings

--- a/Github/github.css
+++ b/Github/github.css
@@ -105,6 +105,10 @@ body h6{
   font-size:1em
 }
 
+body p{
+  font-size:12pt;
+}
+
 body p,body blockquote,body ul,body ol,body dl,body table,body pre{
   margin:15px 0
 }
@@ -112,6 +116,10 @@ body p,body blockquote,body ul,body ol,body dl,body table,body pre{
 body h1 tt,body h1 code,body h2 tt,body h2 code,body h3 tt,body h3 code,body h4 tt,body h4 code,body h5 tt,body h5 code,body h6 tt,body h6 code
 {
   font-size:inherit;
+}
+
+body li{
+  font-size:12pt;
 }
 
 body li p.first
